--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="" />
 		<link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="../css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../css/layer.css" rel='stylesheet' type='text/css' />
 		<link href="../css/font-awesome.css" rel="stylesheet">
 		<script src="../js/jquery-1.11.1.min.js"></script>
 		<script src="../js/modernizr.custom.js"></script>
@@ -28,6 +29,7 @@
 		<script src="../js/scripts.js"></script>
 		<script src="../js/bootstrap.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/layer.js"></script>
 		<script src="../js/index.js"></script>
 	</head>
 
@@ -119,7 +121,7 @@
 					<button id="showLeftPush"><i class="fa fa-bars"></i></button>
 					<div class="logo">
 						<a href="index.html">
-							<h1>后台管理系统</h1>
+							<h1>jenny后台管理系统</h1>
 						</a>
 					</div>
 					<div class="search-box">
