--- a/jenny-web/src/static/html/systemManage/sysUserManage.html
+++ b/jenny-web/src/static/html/systemManage/sysUserManage.html
@@ -7,10 +7,14 @@
 		<link href="../../css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="../../css/bootstrap-table.css" rel='stylesheet' type='text/css' />
 		<link href="../../css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../../css/layui.css" rel='stylesheet' type='text/css' />
+		<link href="../../css/popups.css" rel="stylesheet">
 		<link href="../../css/font-awesome.css" rel="stylesheet">
 		<script src="../../js/jquery-1.11.1.min.js"></script>
 		<script src="../../js/common.js"></script>
+		<script src="../../js/popups.js"></script>
 		<script src="../../js/serializeJson.js"></script>
+		<script src="../../js/jquery.initForm.js"></script>
 		<script src="../../js/jquery.validate.min.js"></script>
 		<script src="../../js/jquery.validate.messages_cn.js"></script>
 		<script src="../../js/custom.validate.js"></script>
@@ -50,10 +54,10 @@
 </html>
 
 <div id="toolbar" class="btn-group">
-	<a href="addSysUser.html" class="btn btn-primary" data-toggle="modal" data-target="#addSysUser">添加</a>
+	<a href="saveSysUser.html" class="btn btn-primary" data-toggle="modal" data-target="#saveSysUser">添加</a>
 </div>
 
-<div class="modal fade" id="addSysUser" data-backdrop="static" data-keyboard="false">
+<div class="modal fade" id="saveSysUser" data-backdrop="static" data-keyboard="false">
 	<div class="modal-dialog" style="width: 80%;">
 		<div class="modal-content">
 
