--- a/jenny-web/src/static/html/systemManage/saveSysUser.html
+++ b/jenny-web/src/static/html/systemManage/saveSysUser.html
@@ -1,12 +1,13 @@
 <!-- 模态框头部 -->
 <div class="modal-header">
-	<h4 class="modal-title">添加用户</h4>
+	<h4 class="modal-title">添加</h4>
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
 </div>
 <!-- 模态框主体 -->
 <div class="modal-body">
 	<div class="form-three widget-shadow">
 		<form class="form-horizontal">
+			<input type="hidden" id="userCode" name="userCode"/>
 			<div class="form-group">
 				<label for="focusedinput" class="col-sm-2 control-label">用户名</label>
 				<div class="col-sm-8">
