--- a/jenny-web/src/static/html/systemManage/sysUserManage.html
+++ b/jenny-web/src/static/html/systemManage/sysUserManage.html
@@ -7,12 +7,11 @@
 		<link href="../../css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="../../css/bootstrap-table.css" rel='stylesheet' type='text/css' />
 		<link href="../../css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/layui.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/popups.css" rel="stylesheet">
+		<link href="../../css/layer.css" rel='stylesheet' type='text/css' />
 		<link href="../../css/font-awesome.css" rel="stylesheet">
 		<script src="../../js/jquery-1.11.1.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/popups.js"></script>
+		<script src="../../js/layer.js"></script>
 		<script src="../../js/serializeJson.js"></script>
 		<script src="../../js/jquery.initForm.js"></script>
 		<script src="../../js/jquery.validate.min.js"></script>
@@ -54,13 +53,110 @@
 </html>
 
 <div id="toolbar" class="btn-group">
-	<a href="saveSysUser.html" class="btn btn-primary" data-toggle="modal" data-target="#saveSysUser">添加</a>
+	<a href="#" class="btn btn-primary" data-toggle="modal" data-target="#saveSysUser">添加</a>
 </div>
 
 <div class="modal fade" id="saveSysUser" data-backdrop="static" data-keyboard="false">
 	<div class="modal-dialog" style="width: 80%;">
 		<div class="modal-content">
-
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<div class="form-three widget-shadow">
+					<form class="form-horizontal">
+						<input type="hidden" id="userCode" name="userCode"/>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">用户名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-user"></i>
+									</span>
+									<input type="text" class="form-control1" maxlength="20" name="userName" id="userName" placeholder="用户名">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">手机号</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-phone"></i>
+									</span>
+									<input type="text" class="form-control1" name="mobile" id="mobile" placeholder="手机号">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">密码</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-key"></i>
+									</span>
+									<input type="password" class="form-control1" name="password" id="password" placeholder="密码">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">邮箱</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-envelope"></i>
+									</span>
+									<input type="email" class="form-control1" name="email" id="email" placeholder="邮箱">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">生日</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-birthday-cake"></i>
+									</span>
+									<input type="date" class="form-control1" name="birthday" id="birthday" placeholder="生日">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">性别</label>
+							<div class="col-sm-8">
+								<div class="radio block"><label><input type="radio" name="gander" id="gander" value="1">男</label></div>
+								<div class="radio block"><label><input type="radio" name="gander" id="gander" value="0">女</label></div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary save">保存</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
 		</div>
 	</div>
 </div>
