扩展bootstrapTable插件，完成系统用户管理

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -25,12 +25,13 @@
 		<script src="../js/custom.js"></script>
 		<link href="../css/custom.css" rel="stylesheet">
 		<script src="../js/classie.js"></script>
-		<script src="../js/jquery.nicescroll.js"></script>
-		<script src="../js/scripts.js"></script>
+		<!--<script src="../js/jquery.nicescroll.js"></script>-->
+		<!--<script src="../js/scripts.js"></script>-->
 		<script src="../js/bootstrap.js"></script>
 		<script src="../js/common.js"></script>
 		<script src="../js/layer.js"></script>
 		<script src="../js/index.js"></script>
+		<!--<script src="/jenny-web/src/static/js/scripts.js"></script>-->
 	</head>
 
 	<body class="cbp-spmenu-push">
@@ -49,10 +50,10 @@
 										<a href="#" src="systemManage/sysUserManage.html">系统用户管理</a>
 									</li>
 									<li>
-										<a href="systemManage/sysRoleManage.html">系统角色管理</a>
+										<a href="#" src="systemManage/sysRoleManage.html">系统角色管理</a>
 									</li>
 									<li>
-										<a href="systemManage/sysMeunManage.html">系统菜单管理</a>
+										<a href="#" src="systemManage/sysMeunManage.html">系统菜单管理</a>
 									</li>
 								</ul>
 							</li>
