修改目录结构

--- a/jenny-web/src/static/html/login.html
+++ b/jenny-web/src/static/html/login.html
@@ -7,18 +7,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>jenny后台管理系统</title>
 
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
-		<link href="../css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../css/signin.css" rel="stylesheet">
-		<link href="../css/layer.css" rel="stylesheet">
-		<script src="../js/jquery-1.11.1.min.js"></script>
-		<script src="../js/bootstrap.js"></script>
-		<script src="../js/jquery.validate.min.js"></script>
-		<script src="../js/jquery.validate.messages_cn.js"></script>
-		<script src="../js/custom.validate.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/layer.js"></script>
-		<script src="../js/jsencrypt.min.js"></script>
+		<link href="../public/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../public/layer/css/layer.css" rel="stylesheet">
+		<link href="../public/css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../public/css/signin.css" rel="stylesheet">
+		<script src="../public/jquery/js/jquery-1.11.1.min.js"></script>
+		<script src="../public/jquery/js/jquery.validate.min.js"></script>
+		<script src="../public/jquery/js/jquery.validate.messages_cn.js"></script>
+		<script src="../public/bootstrap/js/bootstrap.js"></script>
+		<script src="../public/layer/js/layer.js"></script>
+		<script src="../public/js/custom.validate.js"></script>
+		<script src="../public/js/common.js"></script>
+		<script src="../public/js/jsencrypt.min.js"></script>
 		<script src="../js/login.js"></script>
 
 	</head>
