--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -6,31 +6,32 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="" />
-		<link href="../css/bootstrap.css" rel='stylesheet' type='text/css' />
-		<link href="../css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../css/layer.css" rel='stylesheet' type='text/css' />
-		<link href="../css/font-awesome.css" rel="stylesheet">
-		<script src="../js/jquery-1.11.1.min.js"></script>
-		<script src="../js/modernizr.custom.js"></script>
+		<link href="../public/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="../public/layer/css/layer.css" rel='stylesheet' type='text/css' />
+		<link href="../public/css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../public/css/font-awesome.css" rel="stylesheet">
+		<link href="../public/css/animate.css" rel="stylesheet" type="text/css" media="all">
+		<link href="../public/css/clndr.css" rel="stylesheet" type="text/css" />
+		<link href="../public/css/custom.css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-		<link href="../css/animate.css" rel="stylesheet" type="text/css" media="all">
-		<script src="../js/wow.min.js"></script>
-		<script src="../js/Chart.js"></script>
-		<link rel="stylesheet" href="../css/clndr.css" type="text/css" />
-		<script src="../js/underscore-min.js" type="text/javascript"></script>
-		<script src="../js/moment-2.2.1.js" type="text/javascript"></script>
+		
+		<script src="../public/jquery/js/jquery-1.11.1.min.js"></script>
+		<script src="../public/bootstrap/js/bootstrap.js"></script>
+		<script src="../public/layer/js/layer.js"></script>
+		<script src="../public/js/modernizr.custom.js"></script>
+		<script src="../public/js/wow.min.js"></script>
+		<script src="../public/js/Chart.js"></script>
+		<script src="../public/js/underscore-min.js" type="text/javascript"></script>
+		<script src="../public/js/moment-2.2.1.js" type="text/javascript"></script>
+		<script src="../public/js/metisMenu.min.js"></script>
+		<script src="../public/js/custom.js"></script>
+		<script src="../public/js/classie.js"></script>
+		<script src="../public/js/common.js"></script>
+		<script src="../js/index.js"></script>
 		<!--<script src="../js/clndr.js" type="text/javascript"></script>-->
 		<!--<script src="../js/site.js" type="text/javascript"></script>-->
-		<script src="../js/metisMenu.min.js"></script>
-		<script src="../js/custom.js"></script>
-		<link href="../css/custom.css" rel="stylesheet">
-		<script src="../js/classie.js"></script>
 		<!--<script src="../js/jquery.nicescroll.js"></script>-->
 		<!--<script src="../js/scripts.js"></script>-->
-		<script src="../js/bootstrap.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/layer.js"></script>
-		<script src="../js/index.js"></script>
 		<!--<script src="/jenny-web/src/static/js/scripts.js"></script>-->
 	</head>
 
