--- a/jenny-web/src/static/html/systemManage/sysRoleManage.html
+++ b/jenny-web/src/static/html/systemManage/sysRoleManage.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>系统角色管理</title>
-		<link href="../../css/bootstrap.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/bootstrap-table.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/layer.css" rel='stylesheet' type='text/css' />
-		<link href="../../css/font-awesome.css" rel="stylesheet">
-		<script src="../../js/jquery-1.11.1.min.js"></script>
-		<script src="../../js/common.js"></script>
-		<script src="../../js/layer.js"></script>
-		<script src="../../js/jquery.validate.min.js"></script>
-		<script src="../../js/jquery.validate.messages_cn.js"></script>
-		<script src="../../js/custom.validate.js"></script>
-		<script src="../../js/bootstrap.js"></script>
-		<script src="../../js/bootstrap-table.js"></script>
-		<script src="../../js/bootstrap-table-zh-CN.js"></script>
+		<link href="../../public/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="../../public/bootstrap/css/bootstrap-table.css" rel='stylesheet' type='text/css' />
+		<link href="../../public/layer/css/layer.css" rel='stylesheet' type='text/css' />
+		<link href="../../public/css/style.css" rel='stylesheet' type='text/css' />
+		<link href="../../public/css/font-awesome.css" rel="stylesheet">
+		<script src="../../public/jquery/js/jquery-1.11.1.min.js"></script>
+		<script src="../../public/jquery/js/jquery.validate.min.js"></script>
+		<script src="../../public/jquery/js/jquery.validate.messages_cn.js"></script>
+		<script src="../../public/bootstrap/js/bootstrap.js"></script>
+		<script src="../../public/bootstrap/js/bootstrap-table.js"></script>
+		<script src="../../public/bootstrap/js/bootstrap-table-zh-CN.js"></script>
+		<script src="../../public/layer/js/layer.js"></script>
+		<script src="../../public/js/custom.validate.js"></script>
+		<script src="../../public/js/common.js"></script>
 		<script src="../../js/systemManage/sysRoleManage.js"></script>
 	</head>
 	<body>
