菜单管理功能开发

--- a/jenny-web/src/static/html/systemManage/sysMenuManage.html
+++ b/jenny-web/src/static/html/systemManage/sysMenuManage.html
@@ -50,7 +50,7 @@
 							<a href="#action" role="tab" id="action-tab" data-toggle="tab" aria-controls="action" aria-expanded="true">菜单功能</a>
 						</li>
 					</ul>
-					<div class="">
+					<div class="tab-content">
 						<div role="tabpanel" class="tab-pane fade active in" id="info" aria-labelledby="info-tab">
 							<div class="forms">
 								<div class="form-body">
@@ -59,7 +59,7 @@
 										<div class="form-group">
 											<label class="col-sm-3 control-label">菜单名称</label>
 											<div class="col-sm-7">
-												<input type="text" class="form-control" id="munuName" name="munuName" readonly>
+												<input type="text" class="form-control" id="menuName" name="menuName" readonly>
 											</div>
 										</div>
 										<div class="form-group">
