--- a/jenny-web/src/static/html/systemManage/sysMenuManage.html
+++ b/jenny-web/src/static/html/systemManage/sysMenuManage.html
@@ -47,7 +47,7 @@
 							<a href="#info" id="info-tab" role="tab" data-toggle="tab" aria-controls="info" aria-expanded="false">基本信息</a>
 						</li>
 						<li role="presentation" class="">
-							<a href="#action" role="tab" id="action-tab" data-toggle="tab" aria-controls="action" aria-expanded="true">操作功能</a>
+							<a href="#table" role="tab" id="table-tab" data-toggle="tab" aria-controls="table" aria-expanded="true">列表配置</a>
 						</li>
 					</ul>
 					<div class="tab-content">
@@ -57,15 +57,15 @@
 									<form class="form-horizontal" id="menuForm">
 										<input type="hidden" class="form-control" id="menuId" name="menuId">
 										<div class="form-group">
-											<label class="col-sm-3 control-label">菜单名称</label>
-											<div class="col-sm-7">
-												<input type="text" class="form-control" id="menuName" name="menuName" readonly>
-											</div>
-										</div>
-										<div class="form-group">
 											<label class="col-sm-3 control-label">父级菜单名称</label>
 											<div class="col-sm-7">
 												<input type="text" class="form-control" id="parentName" name="parentName" readonly>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="col-sm-3 control-label">菜单名称</label>
+											<div class="col-sm-7">
+												<input type="text" class="form-control" id="menuName" name="menuName" readonly>
 											</div>
 										</div>
 										<div class="form-group">
@@ -89,8 +89,8 @@
 								</div>
 							</div>
 						</div>
-						<div role="tabpanel" class="tab-pane fade" id="action" aria-labelledby="action-tab">
-							<table class="table table-hover" id="sysActionTable">
+						<div role="tabpanel" class="tab-pane fade" id="table" aria-labelledby="table-tab">
+							<table class="table table-hover" id="sysTableTable">
 							</table>
 						</div>
 					</div>
@@ -102,8 +102,174 @@
 	</body>
 </html>
 
-<div class="modal fade" id="saveSysAction" data-backdrop="static" data-keyboard="false">
+<div class="modal fade" id="saveSysTable" data-backdrop="static" data-keyboard="false">
 	<div class="modal-dialog" style="width: 80%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<div class="form-three widget-shadow">
+					<form class="form-horizontal" id="tableForm">
+						<input type="hidden" id="tableId" name="tableId"/>
+						<input type="hidden" id="menuId" name="menuId"/>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">菜单名称</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" maxlength="20" name="menuName" id="menuName" readonly>
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">表格名称</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" maxlength="20" name="tableName" id="tableName">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">接口服务名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" name="interfaceServerId" id="interfaceServerId">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">接口地址</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" name="interfaceUrl" id="interfaceUrl">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">接口方式</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" name="interfaceMethod" id="interfaceMethod">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">表格目标元素</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" name="tableTarget" id="tableTarget">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">表格行主键名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" name="uniqueId" id="uniqueId">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary save">保存</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="setAction" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 80%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<table class="table table-hover" id="sysActionTable">
+				</table>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="setColumn" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 80%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<table class="table table-hover" id="sysColumnTable">
+				</table>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="saveSysAction" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 60%;">
 		<div class="modal-content">
 			<!-- 模态框头部 -->
 			<div class="modal-header">
@@ -115,6 +281,7 @@
 				<div class="form-three widget-shadow">
 					<form class="form-horizontal" id="actionForm">
 						<input type="hidden" id="actionId" name="actionId"/>
+						<input type="hidden" id="tableId" name="tableId"/>
 						<div class="form-group">
 							<label for="focusedinput" class="col-sm-2 control-label">功能名称</label>
 							<div class="col-sm-8">
@@ -122,7 +289,7 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" maxlength="20" name="actionName" id="actionName" placeholder="用户名">
+									<input type="text" class="form-control" maxlength="20" name="actionName" id="actionName">
 								</div>
 							</div>
 							<div class="col-sm-2">
@@ -156,6 +323,7 @@
 									<select class="form-control" name="mutualType" id="mutualType">
 										<option value="CONFIRM">确认</option>
 										<option value="FORM">表单</option>
+										<option value="EXTEND">扩展</option>
 									</select>
 								</div>
 							</div>
@@ -170,7 +338,7 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" name="interfaceServerId" id="interfaceServerId" placeholder="密码">
+									<input type="text" class="form-control" name="interfaceServerId" id="interfaceServerId">
 								</div>
 							</div>
 							<div class="col-sm-2">
@@ -184,7 +352,7 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" name="interfaceUrl" id="interfaceUrl" placeholder="邮箱">
+									<input type="text" class="form-control" name="interfaceUrl" id="interfaceUrl">
 								</div>
 							</div>
 							<div class="col-sm-2">
@@ -198,7 +366,7 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" name="interfaceMethod" id="interfaceMethod" placeholder="生日">
+									<input type="text" class="form-control" name="interfaceMethod" id="interfaceMethod">
 								</div>
 							</div>
 							<div class="col-sm-2">
@@ -212,7 +380,61 @@
 									<span class="input-group-addon">
 										<i class="fa fa-font"></i>
 									</span>
-									<input type="text" class="form-control" name="formTarget" id="formTarget" placeholder="生日">
+									<input type="text" class="form-control" name="formTarget" id="formTarget">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary save">保存</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="saveSysColumn" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 60%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<div class="form-three widget-shadow">
+					<form class="form-horizontal" id="columnForm">
+						<input type="hidden" id="columnId" name="columnId"/>
+						<input type="hidden" id="tableId" name="tableId"/>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">列标题名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" maxlength="20" name="title" id="title">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">列字段名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control" maxlength="20" name="field" id="field">
 								</div>
 							</div>
 							<div class="col-sm-2">
