菜单列表功能和列字段配置开发

--- a/jenny-web/src/static/html/systemManage/sysMenuManage.html
+++ b/jenny-web/src/static/html/systemManage/sysMenuManage.html
@@ -4,16 +4,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>系统菜单管理</title>
-		<link href="../../public/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/bootstrap/css/bootstrap-table.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/fontIconPicker/css/jquery.fonticonpicker.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/fontIconPicker/themes/bootstrap-theme/jquery.fonticonpicker.bootstrap.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/ztree/css/ztree.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/layer/css/layer.css" rel='stylesheet' type='text/css' />
-    	<link href="../../public/fakeLoader/css/fakeLoader.css" rel="stylesheet" type='text/css' >
 		<link href="../../public/css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../../public/css/font-awesome.css" rel="stylesheet" type='text/css' />
 		<script src="../../public/jquery/js/jquery-1.11.1.min.js"></script>
+		<script src="../../public/jquery/js/jquery-ui.js"></script>
 		<script src="../../public/jquery/js/jquery.validate.min.js"></script>
 		<script src="../../public/jquery/js/jquery.validate.messages_cn.js"></script>
 		<script src="../../public/fontIconPicker/js/jquery.fonticonpicker.js"></script>
@@ -40,7 +33,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-6 general-grids-r general-grids grids-right">
+				<div class="col-md-6 general-grids-r general-grids">
 					<h4 class="title3">详细信息</h4>
 					<ul class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active">
