--- a/jenny-web/src/static/html/systemManage/sysRoleManage.html
+++ b/jenny-web/src/static/html/systemManage/sysRoleManage.html
@@ -15,6 +15,9 @@
 		<script src="../../public/bootstrap/js/bootstrap.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table.js"></script>
 		<script src="../../public/bootstrap/js/bootstrap-table-zh-CN.js"></script>
+		<script src="../../public/ztree/js/jquery.ztree.core.js"></script>
+		<script src="../../public/ztree/js/jquery.ztree.excheck.js"></script>
+		<script src="../../public/ztree/js/jquery.ztree.exedit.js"></script>
 		<script src="../../public/layer/js/layer.js"></script>
 		<script src="../../public/fakeLoader/js/fakeLoader.js"></script>
 		<script src="../../public/js/custom.validate.js"></script>
@@ -47,7 +50,7 @@
 </html>
 
 <div class="modal fade" id="saveSysRole" data-backdrop="static" data-keyboard="false">
-	<div class="modal-dialog" style="width: 80%;">
+	<div class="modal-dialog" style="width: 60%;">
 		<div class="modal-content">
 			<!-- 模态框头部 -->
 			<div class="modal-header">
@@ -58,13 +61,27 @@
 			<div class="modal-body">
 				<div class="form-three widget-shadow">
 					<form class="form-horizontal">
-						<input type="hidden" id="userCode" name="userCode"/>
+						<input type="hidden" id="roleId" name="roleId"/>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">角色代码</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-font"></i>
+									</span>
+									<input type="text" class="form-control1" maxlength="20" name="roleCode" id="roleCode" placeholder="角色代码">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
 						<div class="form-group">
 							<label for="focusedinput" class="col-sm-2 control-label">角色名称</label>
 							<div class="col-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon">
-										<i class="fa fa-user"></i>
+										<i class="fa fa-font"></i>
 									</span>
 									<input type="text" class="form-control1" maxlength="20" name="roleName" id="roleName" placeholder="角色名称">
 								</div>
@@ -74,6 +91,44 @@
 							</div>
 						</div>
 					</form>
+				</div>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary save">保存</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="setMenu" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 50%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<div class="form-horizontal">
+					<div class="form-group">
+						<label class="col-sm-2 control-label">角色代码</label>
+						<div class="col-sm-4">
+							<p class="form-control-static" id="roleCode"></p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-2 control-label">角色名称</label>
+						<div class="col-sm-4">
+							<p class="form-control-static" id="roleName"></p>
+						</div>
+					</div>
+				</div>
+				<div>
+					<ul id="selectedMenu" class="ztree">
+					</ul>
 				</div>
 			</div>
 			<!-- 模态框底部 -->
