--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -6,13 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="" />
-		<link href="../public/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="../public/fontIconPicker/themes/bootstrap-theme/jquery.fonticonpicker.bootstrap.css" rel='stylesheet' type='text/css' />
 		<link href="../public/fontIconPicker/icomoon/style.css" rel='stylesheet' type='text/css' />
-		<link href="../public/layer/css/layer.css" rel='stylesheet' type='text/css' />
-    	<link href="../public/fakeLoader/css/fakeLoader.css" rel="stylesheet" type='text/css' >
 		<link href="../public/css/style.css" rel='stylesheet' type='text/css' />
-		<link href="../public/css/font-awesome.css" rel="stylesheet">
 		<link href="../public/css/animate.css" rel="stylesheet" type="text/css" media="all">
 		<link href="../public/css/clndr.css" rel="stylesheet" type="text/css" />
 		<link href="../public/css/custom.css" rel="stylesheet">
@@ -72,7 +68,7 @@
 					<div class="clearfix"> </div>
 				</div>
 				<div class="header-right">
-					<div class="profile_details_left">
+					<div class="profile_details_left" style="display: none;">
 						<ul class="nofitications-dropdown">
 							<li class="dropdown head-dpdn">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-envelope"></i><span class="badge">3</span></a>
@@ -233,7 +229,7 @@
 									<div class="profile_img">
 										<span class="prfil-img"><img src="../public/images/a.png" alt=""> </span>
 										<div class="user-name">
-											<p>Wikolia</p>
+											<p id="userName">admin</p>
 											<span>Administrator</span>
 										</div>
 										<i class="fa fa-angle-down lnr"></i>
@@ -243,13 +239,13 @@
 								</a>
 								<ul class="dropdown-menu drp-mnu">
 									<li>
-										<a href="#"><i class="fa fa-cog"></i> Settings</a>
+										<a href="#" id="setting"><i class="fa fa-cog"></i> 设置</a>
 									</li>
 									<li>
-										<a href="#"><i class="fa fa-user"></i> Profile</a>
+										<a href="#" data-toggle="modal" data-target="#information"><i class="fa fa-user"></i> 我的资料</a>
 									</li>
 									<li>
-										<a href="#"><i class="fa fa-sign-out"></i> Logout</a>
+										<a href="#" onclick="logout();"><i class="fa fa-sign-out"></i> 退出</a>
 									</li>
 								</ul>
 							</li>
@@ -268,3 +264,94 @@
 	</body>
 
 </html>
+
+<div class="modal fade" id="information" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog" style="width: 60%;">
+		<div class="modal-content">
+			<!-- 模态框头部 -->
+			<div class="modal-header">
+				<h4 class="modal-title">添加</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+			</div>
+			<!-- 模态框主体 -->
+			<div class="modal-body">
+				<div class="form-three widget-shadow">
+					<form class="form-horizontal">
+						<input type="hidden" id="userId" name="userId"/>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">用户名</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-user"></i>
+									</span>
+									<input type="text" class="form-control1" maxlength="20" name="userName" id="userName" placeholder="用户名">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">手机号</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-phone"></i>
+									</span>
+									<input type="text" class="form-control1" name="mobile" id="mobile" placeholder="手机号">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">邮箱</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-envelope"></i>
+									</span>
+									<input type="email" class="form-control1" name="email" id="email" placeholder="邮箱">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">生日</label>
+							<div class="col-sm-8">
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="fa fa-birthday-cake"></i>
+									</span>
+									<input type="date" class="form-control1" name="birthday" id="birthday" placeholder="生日">
+								</div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="focusedinput" class="col-sm-2 control-label">性别</label>
+							<div class="col-sm-8">
+								<div class="radio block"><label><input type="radio" name="gander" value="1">男</label></div>
+								<div class="radio block"><label><input type="radio" name="gander" value="0">女</label></div>
+							</div>
+							<div class="col-sm-2">
+								<p class="help-block"></p>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<!-- 模态框底部 -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary save">保存</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+			</div>
+		</div>
+	</div>
+</div>
