系统风格设置优化

--- a/jenny-web/src/static/html/index.html
+++ b/jenny-web/src/static/html/index.html
@@ -151,15 +151,13 @@
 
 					<div class="dropdown-menu arrow search dropdown-menu-form">
 						<div class="dd-header">
-							<span>Search</span>
-							<span><a href="#">Advanced search</a></span>
+							<span>搜索</span>
+							<span><a href="#">高级搜索</a></span>
 						</div>
 						<div class="input-group">
 							<input type="text" class="form-control" placeholder="">
-
 							<span class="input-group-btn">
-						
-						<a class="btn btn-primary" href="#">Search</a>
+						<a class="btn btn-primary" href="#">搜索</a>
 					</span>
 						</div>
 					</div>
@@ -227,18 +225,7 @@
 						<div class="page-content">
 							<ul class="nav nav-tabs" role="tablist">
 							</ul>
-							<ol class="breadcrumb">
-								<li>
-									<a href="index.html">主页</a>
-								</li>
-								<li>
-									<a href="#">UI Elements</a>
-								</li>
-								<li class="active">
-									<a href="ui-forms.html">Forms</a>
-								</li>
-							</ol>
-							<div class="tab-content">
+							<div class="tab-content" style="padding-top: 10px;">
 							</div>
 						</div>
 					</div>
@@ -284,14 +271,16 @@
 				<div class="option-title">头部背景</div>
 				<ul id="demo-header-color" class="demo-color-list">
 					<li><span class="demo-white"></span></li>
-					<li><span class="demo-black"></span></li>
-					<li><span class="demo-midnightblue"></span></li>
-					<li><span class="demo-primary"></span></li>
-					<li><span class="demo-info"></span></li>
 					<li><span class="demo-alizarin"></span></li>
-					<li><span class="demo-grape"></span></li>
-					<li><span class="demo-violet"></span></li>
+					<li><span class="demo-danger"></span></li>
+					<li><span class="demo-info"></span></li>
+					<li><span class="demo-green"></span></li>
+					<li><span class="demo-primary"></span></li>
 					<li><span class="demo-indigo"></span></li>
+					<li><span class="demo-violet"></span></li>
+					<li><span class="demo-grape"></span></li>
+					<li><span class="demo-midnightblue"></span></li>
+					<li><span class="demo-black"></span></li>
 				</ul>
 			</div>
 
@@ -299,31 +288,33 @@
 				<div class="option-title">菜单背景</div>
 				<ul id="demo-sidebar-color" class="demo-color-list">
 					<li><span class="demo-white"></span></li>
-					<li><span class="demo-black"></span></li>
-					<li><span class="demo-midnightblue"></span></li>
-					<li><span class="demo-primary"></span></li>
-					<li><span class="demo-info"></span></li>
 					<li><span class="demo-alizarin"></span></li>
-					<li><span class="demo-grape"></span></li>
-					<li><span class="demo-violet"></span></li>
+					<li><span class="demo-danger"></span></li>
+					<li><span class="demo-info"></span></li>
+					<li><span class="demo-green"></span></li>
+					<li><span class="demo-primary"></span></li>
 					<li><span class="demo-indigo"></span></li>
+					<li><span class="demo-violet"></span></li>
+					<li><span class="demo-grape"></span></li>
+					<li><span class="demo-midnightblue"></span></li>
+					<li><span class="demo-black"></span></li>
 				</ul>
 			</div>
 
 			<div class="demo-body hide" id="demo-boxes">
 				<div class="option-title">窗口背景</div>
 				<ul id="demo-boxed-bg" class="demo-color-list">
-					<li><span class="pattern-brickwall"></span></li>
-					<li><span class="pattern-dark-stripes"></span></li>
+					<li><span class="patther-wild_oliva"></span></li>
 					<li><span class="pattern-rockywall"></span></li>
-					<li><span class="pattern-subtle-carbon"></span></li>
+					<li><span class="pattern-sos"></span></li>
+					<li><span class="pattern-brickwall"></span></li>
+					<li><span class="pattern-grey_wash_wall"></span></li>
 					<li><span class="pattern-tweed"></span></li>
 					<li><span class="pattern-vertical-cloth"></span></li>
-					<li><span class="pattern-grey_wash_wall"></span></li>
-					<li><span class="pattern-pw_maze_black"></span></li>
-					<li><span class="patther-wild_oliva"></span></li>
 					<li><span class="pattern-stressed_linen"></span></li>
-					<li><span class="pattern-sos"></span></li>
+					<li><span class="pattern-dark-stripes"></span></li>
+					<li><span class="pattern-pw_maze_black"></span></li>
+					<li><span class="pattern-subtle-carbon"></span></li>
 				</ul>
 			</div>
 
