--- a/jenny-web/src/static/html/systemManage/sysMenuManage.html
+++ b/jenny-web/src/static/html/systemManage/sysMenuManage.html
@@ -73,7 +73,7 @@
 														</div>
 														<div class="form-group">
 															<div class="col-sm-offset-3 col-sm-7">
-																<button type="submit" class="btn btn-default">保存</button>
+																<button type="button" class="btn btn-default submit">保存</button>
 															</div>
 														</div>
 													</form>
